# flathub-rs

./: Cargo.toml  README.md  openapi.json
src/: app_hit.rs  appstream.rs  client.rs  error.rs  home_page.rs  lib.rs  pagination.rs  utils.rs
