[package]
name = "flathub-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.77"
once_cell = "1.19.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
reqwest-middleware = "0.2.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
